--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
             "**/.svn": true,
             "**/.hg": true,
             "**/.DS_Store": true,
-            "**/app/**/*.js" : true
+            "**/app/**/*.js" : true,
+            "**/app/**/*.js.map" : true
       }
 }
