number spinner added

--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "@angular/platform-browser-dynamic": "~2.3.0",
     "@angular/router": "~3.3.0",
     "angular-in-memory-web-api": "~0.1.17",
-    "systemjs": "0.19.40",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-rc.4",
+    "systemjs": "0.19.40",
     "zone.js": "^0.7.2"
   },
   "devDependencies": {
