--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,4 +8,6 @@
             "**/app/**/*.js" : true,
             "**/app/**/*.js.map" : true
       }
+,
+"typescript.tsdk": "./node_modules/typescript/lib"
 }
