--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "angular-in-memory-web-api": "~0.1.17",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "primeng": "^2.0.0-rc.3",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-rc.4",
     "systemjs": "0.19.40",
